--- a/index.html
+++ b/index.html
@@ -1,56 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <title>Dicas de Itens - Genshin Impact</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f3f3f3;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav {
-            background-color: #444;
-            color: #fff;
-            padding: 10px;
-        }
-
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        section {
-            padding: 20px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Importando o arquivo CSS externo -->
 </head>
 
 <body>
@@ -69,20 +23,29 @@
 
     <section id="personagens">
         <h2>Personagens</h2>
-        <p>Aqui você encontra dicas e guias sobre os personagens de Genshin Impact.</p>
-        <!-- Adicione informações sobre personagens -->
+        <!-- Exemplo de link de imagem para personagem -->
+        <a class="item-link" href="link_para_personagem.html">
+            <img src="caminho_para_imagem_personagem.png" alt="Nome do Personagem">
+        </a>
+        <!-- Adicione mais links de imagens para outros personagens -->
     </section>
 
     <section id="armas">
         <h2>Armas</h2>
-        <p>Conheça mais sobre as armas disponíveis no jogo.</p>
-        <!-- Adicione informações sobre armas -->
+        <!-- Exemplo de link de imagem para arma -->
+        <a class="item-link" href="link_para_arma.html">
+            <img src="caminho_para_imagem_arma.png" alt="Nome da Arma">
+        </a>
+        <!-- Adicione mais links de imagens para outras armas -->
     </section>
 
     <section id="artefatos">
         <h2>Artefatos</h2>
-        <p>Descubra informações úteis sobre artefatos e conjuntos.</p>
-        <!-- Adicione informações sobre artefatos -->
+        <!-- Exemplo de link de imagem para artefato -->
+        <a class="item-link" href="link_para_artefato.html">
+            <img src="caminho_para_imagem_artefato.png" alt="Nome do Artefato">
+        </a>
+        <!-- Adicione mais links de imagens para outros artefatos -->
     </section>
 
     <footer>
