add new content

--- a/index.html
+++ b/index.html
@@ -1,55 +1,64 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Dicas de Itens - Genshin Impact</title>
+    <title>Guia do Chongyun - Genshin Impact</title>
     <link rel="stylesheet" href="styles.css"> <!-- Importando o arquivo CSS externo -->
 </head>
 
 <body>
 
     <header>
-        <h1>Dicas de Itens - Genshin Impact</h1>
+        <h1>Guia do Chongyun</h1>
     </header>
 
     <nav>
         <ul>
-            <li><a href="#personagens">Personagens</a></li>
-            <li><a href="#armas">Armas</a></li>
-            <li><a href="#artefatos">Artefatos</a></li>
+            <li><a href="#habilidades">Habilidades</a></li>
+            <li><a href="#constelacoes">Constelações</a></li>
+            <li><a href="#builds">Builds</a></li>
         </ul>
     </nav>
 
-    <section id="personagens">
-        <h2>Personagens</h2>
-        <!-- Exemplo de link de imagem para personagem -->
-        <a class="item-link" href="link_para_personagem.html">
-            <img src="caminho_para_imagem_personagem.png" alt="Nome do Personagem">
-        </a>
-        <!-- Adicione mais links de imagens para outros personagens -->
+    <section id="habilidades">
+        <h2>Habilidades</h2>
+        <div class="habilidade">
+            <h3>Skill Elemental - Espírito da Neblina</h3>
+            <p>Descrição da habilidade e como utilizá-la.</p>
+        </div>
+        <div class="habilidade">
+            <h3>Burst Elemental - Invocação: Lâminas de Gelo</h3>
+            <p>Descrição da habilidade e estratégias de uso.</p>
+        </div>
     </section>
 
-    <section id="armas">
-        <h2>Armas</h2>
-        <!-- Exemplo de link de imagem para arma -->
-        <a class="item-link" href="link_para_arma.html">
-            <img src="caminho_para_imagem_arma.png" alt="Nome da Arma">
-        </a>
-        <!-- Adicione mais links de imagens para outras armas -->
+    <section id="constelacoes">
+        <h2>Constelações</h2>
+        <div class="constelacao">
+            <h3>Constelação 1 - Ice Unleashed</h3>
+            <p>Descrição da constelação e seus efeitos.</p>
+        </div>
+        <div class="constelacao">
+            <h3>Constelação 2 - Atmospheric Revolution</h3>
+            <p>Descrição da constelação e suas vantagens.</p>
+        </div>
     </section>
 
-    <section id="artefatos">
-        <h2>Artefatos</h2>
-        <!-- Exemplo de link de imagem para artefato -->
-        <a class="item-link" href="link_para_artefato.html">
-            <img src="caminho_para_imagem_artefato.png" alt="Nome do Artefato">
-        </a>
-        <!-- Adicione mais links de imagens para outros artefatos -->
+    <section id="builds">
+        <h2>Builds</h2>
+        <div class="build">
+            <h3>Build de Cryo DPS</h3>
+            <p>Detalhes sobre artefatos, armas e atributos recomendados.</p>
+        </div>
+        <div class="build">
+            <h3>Build de Suporte</h3>
+            <p>Recomendações para uma build de suporte eficaz.</p>
+        </div>
     </section>
 
     <footer>
-        <p>&copy; 2023 Dicas de Itens - Genshin Impact</p>
+        <p>&copy; 2023 Guia do Chongyun - Genshin Impact</p>
     </footer>
 
 </body>
