alterações e preenchendo dados

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Guia do Chongyun - Genshin Impact</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Importando o arquivo CSS externo -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -25,23 +25,25 @@
         <h2>Habilidades</h2>
         <div class="habilidade">
             <h3>Skill Elemental - Espírito da Neblina</h3>
-            <p>Descrição da habilidade e como utilizá-la.</p>
+            <p>Chongyun golpeia o chão com seu Espadão, causando uma explosão Cryo em uma AdE circular na sua frente que inflige Dano Cryo. Depois de um curto intervalo, o ar frio criado pela explosão Cryo se coalescerá em um Campo Gelado Chonghua, em que todos os personagens que usem Espada, Espadão ou Lança serão imbuídos com Cryo.</p>
         </div>
         <div class="habilidade">
             <h3>Burst Elemental - Invocação: Lâminas de Gelo</h3>
-            <p>Descrição da habilidade e estratégias de uso.</p>
+            <p>Criando os secretos selos artesanais, Chongyun evoca 3 lâminas espirituais em pleno ar que caem à terra uma por uma depois de um curto período de tempo, explodindo assim que encostam ao chão.
+                Quando as lâminas espirituais explodem, elas infligem Dano Cryo em uma AdE e lançam inimigos.</p>
         </div>
     </section>
 
     <section id="constelacoes">
-        <h2>Constelações</h2>
+        <h2>Constelações Importantes para o Chongyun</h2>
         <div class="constelacao">
-            <h3>Constelação 1 - Ice Unleashed</h3>
-            <p>Descrição da constelação e seus efeitos.</p>
+            <h3>Constelação 1 - Nevasca Desencadeada</h3>
+            <p>O último ataque do combo de Ataques Normais do Chongyun libera 3 lâminas de gelo. Cada Lâmina inflige 50% do ATQ de Chongyun como Dano Cryo a todos os inimigos em seu caminho.</p>
         </div>
         <div class="constelacao">
-            <h3>Constelação 2 - Atmospheric Revolution</h3>
-            <p>Descrição da constelação e suas vantagens.</p>
+            <h3>Constelação 6 - Reforço das Quatro Lâminas</h3>
+            <p>A Lâmina Espiritual - Estrela Cadente inflige 15% a mais de Dano em inimigos com uma baixa porcentagem de sua Vida Máxima restante menor que a de Chongyun.
+                Essa Habilidade também irá evocar uma lâmina espiritual adicional.</p>
         </div>
     </section>
 
@@ -49,11 +51,11 @@
         <h2>Builds</h2>
         <div class="build">
             <h3>Build de Cryo DPS</h3>
-            <p>Detalhes sobre artefatos, armas e atributos recomendados.</p>
+            <p>Busque usar duas peças do Blizzard Strayer Image Blizzard Strayer e duas peças do Gladiator Gladiator's Finale, priorizando ataque& nas areias, bonus de dano cryo na taça , e taxa critica ou dano critico na coroa, dependendo do que estiver precisando</p>
         </div>
         <div class="build">
             <h3>Build de Suporte</h3>
-            <p>Recomendações para uma build de suporte eficaz.</p>
+            <p>Busque usar 4 peças do Emblem of Severed Fate, priorizando ataque % ou recarga de energia nas areias, bonus de dano cryo na taça , e taxa critica ou dano critico na coroa, dependendo do que estiver precisando.</p>
         </div>
     </section>
 
