--- a/index.html
+++ b/index.html
@@ -1,48 +1,76 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+/* Estilos CSS */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(255, 255, 255);
+    background-image: url('caminho_para_sua_imagem_de_fundo.jpg'); /* Adicione sua imagem de fundo aqui */
+    background-size: cover;
+    background-position: center;
+}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Dicas de Itens - Genshin Impact</title>
-</head>
-<link rel="stylesheet" href="styles.css">
+header {
+    background-color: #2c3e50;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+}
 
-<body>
+nav {
+    background-color: #34495e;
+    color: #fff;
+    padding: 10px;
+}
 
-    <header>
-        <h1>Dicas de Itens - Genshin Impact</h1>
-    </header>
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
 
-    <nav>
-        <ul>
-            <li><a href="#personagens">Personagens</a></li>
-            <li><a href="#armas">Armas</a></li>
-            <li><a href="#artefatos">Artefatos</a></li>
-        </ul>
-    </nav>
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
 
-    <section id="personagens">
-        <h2>Personagens</h2>
-        <p>Aqui você encontra dicas e guias sobre os personagens de Genshin Impact.</p>
-        <!-- Adicione informações sobre personagens -->
-    </section>
+section {
+    padding: 20px;
+}
 
-    <section id="armas">
-        <h2>Armas</h2>
-        <p>Conheça mais sobre as armas disponíveis no jogo.</p>
-        <!-- Adicione informações sobre armas -->
-    </section>
+section h2 {
+    color: #3498db;
+    border-bottom: 2px solid #3498db;
+    padding-bottom: 10px;
+}
 
-    <section id="artefatos">
-        <h2>Artefatos</h2>
-        <p>Descubra informações úteis sobre artefatos e conjuntos.</p>
-        <!-- Adicione informações sobre artefatos -->
-    </section>
+.habilidade, .constelacao, .build {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+}
 
-    <footer>
-        <p>&copy; 2023 Dicas de Itens - Genshin Impact</p>
-    </footer>
+.habilidade img,
+.constelacao img {
+    width: 150px;
+    height: auto;
+    margin-right: 20px;
+}
 
-</body>
+.habilidade .texto-habilidade,
+.constelacao .texto-constelacao {
+    flex: 1;
+}
 
-</html>
+footer {
+    background-color: #2c3e50;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
