--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>Habilidades</h2>
         <div class="habilidade">
             <div class="habilidade-info">
-                <img src="C:\Users\Jhyzn\OneDrive\Documentos\GitHub\SegundaAvaliacao\imagens\habilidade 1.png" alt="Habilidade">
+                <img src="caminho_para_imagem_habilidade.jpg" alt="Habilidade">
                 <div class="texto-habilidade">
                     <h3>Skill Elemental - Espírito da Neblina</h3>
                     <p>Chongyun golpeia o chão com seu Espadão, causando uma explosão Cryo em uma AdE circular na sua frente que inflige Dano Cryo. Depois de um curto intervalo, o ar frio criado pela explosão Cryo se coalescerá em um Campo Gelado Chonghua, em que todos os personagens que usem Espada, Espadão ou Lança serão imbuídos com Cryo.</p>
@@ -34,7 +34,7 @@
         </div>
         <div class="habilidade">
             <div class="habilidade-info">
-                <img src="C:\Users\Jhyzn\OneDrive\Documentos\GitHub\SegundaAvaliacao\imagens\habilidade 2.png" alt="Outra Habilidade">
+                <img src="caminho_para_outra_imagem_habilidade.jpg" alt="Outra Habilidade">
                 <div class="texto-habilidade">
                     <h3>Burst Elemental - Invocação: Lâminas de Gelo</h3>
                     <p>Criando os secretos selos artesanais, Chongyun evoca 3 lâminas espirituais em pleno ar que caem à terra uma por uma depois de um curto período de tempo, explodindo assim que encostam ao chão. Quando as lâminas espirituais explodem, elas infligem Dano Cryo em uma AdE e lançam inimigos.</p>
