--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="constelacao">
             <div class="constelacao-info">
-                <img src="caminho_para_outra_imagem_constelacao.jpg" alt="Outra Constelação">
+                <img src="https://static.wikia.nocookie.net/gensin-impact/images/9/93/Talent_Spirit_Blade_Cloud-Parting_Star.png/revision/latest/scale-to-width-down/45?cb=20210607092042" alt="Outra Constelação">
                 <div class="texto-constelacao">
                     <h3>Constelação 6 - Reforço das Quatro Lâminas</h3>
                     <p>A Lâmina Espiritual - Estrela Cadente inflige 15% a mais de Dano em inimigos com uma baixa porcentagem de sua Vida Máxima restante menor que a de Chongyun. Essa Habilidade também irá evocar uma lâmina espiritual adicional.</p>
